# clox-

./: CMakeLists.txt  Lox.cpp  Scanner.cpp  Scanner.hpp  Token.h  Token.hpp  notes.txt  test.txt
frontend/: CMakeLists.txt  Scanner.cpp  Scanner.hpp  Token.hpp
testing/: CMakeLists.txt  example1_test.cpp
tests/: CMakeLists.txt  scanner_test.cpp
